📝 job description updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2017-04-12 Wed 10:20 -->
+<!-- 2017-04-13 Thu 07:51 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Piotr Limanowski</title>
@@ -238,131 +238,123 @@ for the JavaScript code in this tag.
 <div class="A4"><section class="sheet">
 <div class="hexagon"><div class="hexTop"></div><div class="hexBottom"></div></div>
 
-<div id="outline-container-org7c7f877" class="outline-2 header">
-<h2 id="org7c7f877">Piotr Limanowski</h2>
-<div class="outline-text-2" id="text-org7c7f877">
+<div id="outline-container-org96fad74" class="outline-2 header">
+<h2 id="org96fad74">Piotr Limanowski</h2>
+<div class="outline-text-2" id="text-org96fad74">
 </div>
 </div>
-<div id="outline-container-org4b54e24" class="outline-2 contact">
-<h2 id="org4b54e24">Contact</h2>
-<div class="outline-text-2" id="text-org4b54e24">
+<div id="outline-container-org75e84cf" class="outline-2 contact">
+<h2 id="org75e84cf">Contact</h2>
+<div class="outline-text-2" id="text-org75e84cf">
 <dl class="org-dl">
 <dt>email</dt><dd><a href="mailto:piotr@codearsonist.com">piotr@codearsonist.com</a></dd>
 <dt>web</dt><dd><a href="https://codearsonist.com">codearsonist.com</a></dd>
 </dl>
 </div>
 </div>
-<div id="outline-container-orgdcc1689" class="outline-2 experience">
-<h2 id="orgdcc1689">Experience</h2>
-<div class="outline-text-2" id="text-orgdcc1689">
+<div id="outline-container-orgfbccf5c" class="outline-2 experience">
+<h2 id="orgfbccf5c">Experience</h2>
+<div class="outline-text-2" id="text-orgfbccf5c">
 </div>
-<div id="outline-container-org9eba111" class="outline-3">
-<h3 id="org9eba111">Technical Architect - Schibsted Tech Polska</h3>
-<div class="outline-text-3" id="text-org9eba111">
+<div id="outline-container-orgd5596ef" class="outline-3">
+<h3 id="orgd5596ef">Technical Architect - Schibsted Tech Polska</h3>
+<div class="outline-text-3" id="text-orgd5596ef">
 </div>
-<div id="outline-container-org8c224e4" class="outline-4">
-<h4 id="org8c224e4">Jan 2015 - to date</h4>
-<div class="outline-text-4" id="text-org8c224e4">
+<div id="outline-container-orgfb7218e" class="outline-4">
+<h4 id="orgfb7218e">Jan 2015 - to date</h4>
+<div class="outline-text-4" id="text-orgfb7218e">
 <ul class="org-ul">
-<li>Co-lead innovative project of migrating a whole media house into Amazon Web Services reducing operations costs and delivery times</li>
-<li>Built a highly-optimised, business workflow-oriented, distributed authorisation, authentication, and payment layer built on top of Scala (both actor model - akka and functional typelevel stack) and Elixir</li>
-<li>Designed and built administrative tools for process management based upon Elixir/OTP improving monitoring, response times and error handling</li>
+<li>Co-lead innovative project of migrating a whole media house into <b>Amazon Web Services</b> reducing operations costs and delivery times</li>
+<li>Built a highly-optimised, business workflow-oriented, distributed authorisation, authentication, and payment layer built on top of <b>Scala</b> (both actor model - akka and functional typelevel stack) and <b>Elixir</b></li>
+<li>Designed and built administrative tools for process management based upon <b>Elixir/OTP</b> improving monitoring, response times and error handling</li>
 <li>Built development tools and continuous delivery processes that improved development and delivery times by a level of magnitude</li>
 </ul>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org9697225" class="outline-3">
-<h3 id="org9697225">Technical Architect - Middleware Services - Nordea</h3>
-<div class="outline-text-3" id="text-org9697225">
-</div><div id="outline-container-orgd8ab9e9" class="outline-4">
-<h4 id="orgd8ab9e9">Jan 2012 - Dec 2014</h4>
-<div class="outline-text-4" id="text-orgd8ab9e9">
+<div id="outline-container-org4bf9912" class="outline-3">
+<h3 id="org4bf9912">Technical Architect - Middleware Services - Nordea</h3>
+<div class="outline-text-3" id="text-org4bf9912">
+</div>
+<div id="outline-container-org278ee01" class="outline-4">
+<h4 id="org278ee01">Jan 2012 - Dec 2014</h4>
+<div class="outline-text-4" id="text-org278ee01">
 <ul class="org-ul">
-<li>Designed and built middleware, business services stack enabling fast service delivery, scalability, simple integration and changeability</li>
+<li>Designed and built <b>Java</b> and <b>Scala</b> middleware, business services stack enabling fast service delivery, scalability, simple integration and changeability</li>
 <li>Built and introduced development tools and continuous delivery processes that improved development and delivery times by a level of magnitude</li>
 </ul>
 </div>
 </div>
 </div>
-
-<div id="outline-container-org7fbc4f6" class="outline-3">
-<h3 id="org7fbc4f6">Java Developer - Financial Analysis &amp; Reporting - Nordea</h3>
-<div class="outline-text-3" id="text-org7fbc4f6">
-</div><div id="outline-container-orgc7c47c6" class="outline-4">
-<h4 id="orgc7c47c6">April 2011 - Dec 2011</h4>
-<div class="outline-text-4" id="text-orgc7c47c6">
-<p>
-The aim of the project was to deliver an application for rating calculation, analysis and reporting of corporate customers’.
-</p>
+<div id="outline-container-orge4a4745" class="outline-3">
+<h3 id="orge4a4745">Java Developer - Financial Analysis &amp; Reporting - Nordea</h3>
+<div class="outline-text-3" id="text-orge4a4745">
+</div>
+<div id="outline-container-org842ebca" class="outline-4">
+<h4 id="org842ebca">April 2011 - Dec 2011</h4>
+<div class="outline-text-4" id="text-org842ebca">
+<ul class="org-ul">
+<li>Lead and implemented <b>Java</b> and <b>Ruby</b> backends for an international rating calculation, analysis and reporting tool</li>
+</ul>
+</div>
+</div>
+</div>
+<div id="outline-container-org980f03c" class="outline-3">
+<h3 id="org980f03c">Java Developer - File Delivery Automation - Nordea</h3>
+<div class="outline-text-3" id="text-org980f03c">
+</div>
+<div id="outline-container-orgbf0d171" class="outline-4">
+<h4 id="orgbf0d171">April 2011 - Dec 2011</h4>
+<div class="outline-text-4" id="text-orgbf0d171">
+<ul class="org-ul">
+<li>Designed and built an automated tool for customisable and secure data delivery, removing multiple shaky solutions and manual processes using <b>Java</b> controller and <b>Ruby</b> remote agents</li>
+</ul>
+</div>
+</div>
+</div>
+<div id="outline-container-orgb5f8e10" class="outline-3">
+<h3 id="orgb5f8e10">Java Developer - Kaos Consulting</h3>
+<div class="outline-text-3" id="text-orgb5f8e10">
+</div>
+<div id="outline-container-orgd0beae9" class="outline-4">
+<h4 id="orgd0beae9">Oct 2010 - April 2011</h4>
+<div class="outline-text-4" id="text-orgd0beae9">
+<ul class="org-ul">
+<li>Picked as a top-developer for a project by the employer through International Exchange Bureau draft</li>
+<li>Built an automated data analysis and trend recognition APIs based upon <b>Hadoop</b> and <b>Java</b></li>
+<li>Implemented intra-language interfaces to accomodate existing subsystems providing an isolation layer</li>
+</ul>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org3ab09f2" class="outline-3">
-<h3 id="org3ab09f2">Java Developer - File Delivery Automation - Nordea</h3>
-<div class="outline-text-3" id="text-org3ab09f2">
-</div><div id="outline-container-orga259216" class="outline-4">
-<h4 id="orga259216">April 2011 - Dec 2011</h4>
-<div class="outline-text-4" id="text-orga259216">
-<p>
-The aim of the project was to deliver a common, automated, scalable and managed solution for inter and intra-company  le deliveries.
-</p>
+<div id="outline-container-org9af7919" class="outline-3">
+<h3 id="org9af7919">Web Developer - Photoblog.pl</h3>
+<div class="outline-text-3" id="text-org9af7919">
 </div>
-</div>
-</div>
-
-<div id="outline-container-org6d6a1d9" class="outline-3">
-<h3 id="org6d6a1d9">Java Developer - KAOS Consulting</h3>
-<div class="outline-text-3" id="text-org6d6a1d9">
-</div><div id="outline-container-orgccfe237" class="outline-4">
-<h4 id="orgccfe237">Oct 2010 - April 2011</h4>
-<div class="outline-text-4" id="text-orgccfe237">
-<p>
-I was picked as a developer for the project from an International Exchange Bureau draft. The aim of the project was to deliver an automated data analysis and trend recognition tool along with cross-system integration.
-</p>
-</div>
-</div>
-</div>
-
-<div id="outline-container-org3da67b7" class="outline-3">
-<h3 id="org3da67b7">Web Developer, m.photoblog.pl - PixNet</h3>
-<div class="outline-text-3" id="text-org3da67b7">
-</div><div id="outline-container-org7ca4d9b" class="outline-4">
-<h4 id="org7ca4d9b">Oct 2010 - Jan 2009</h4>
-<div class="outline-text-4" id="text-org7ca4d9b">
-<p>
-The aim of the project was to build a mobile application for the biggest polish photoblogging platform.
-</p>
-</div>
-</div>
-</div>
-
-<div id="outline-container-orgc5fa6b6" class="outline-3">
-<h3 id="orgc5fa6b6">Web Developer, PhotoSplash - PixNet</h3>
-<div class="outline-text-3" id="text-orgc5fa6b6">
-</div><div id="outline-container-orga356937" class="outline-4">
-<h4 id="orga356937">Oct 2010 - Jan 2009</h4>
-<div class="outline-text-4" id="text-orga356937">
-<p>
-The aim of the project was to build a web application allowing a user to input a photo and pick photo manipulation effect to be applied. 
-</p>
+<div id="outline-container-orgde3caba" class="outline-4">
+<h4 id="orgde3caba">Oct 2007 - Jan 2009</h4>
+<div class="outline-text-4" id="text-orgde3caba">
+<ul class="org-ul">
+<li>Designed and built a mobile website (<b>PHP</b>, <b>JS</b>), application for the biggest polish photoblogging platform improving mobile usage of the platform several times</li>
+<li>Cooperated on design and implementation (<b>Java</b>, <b>PHP</b>) of automated photomanipulation effects applied to given photos</li>
+</ul>
 </div>
 </div>
 </div>
 </div>
-<div id="outline-container-org983debd" class="outline-2 education">
-<h2 id="org983debd">Education</h2>
-<div class="outline-text-2" id="text-org983debd">
+<div id="outline-container-orgcdbff15" class="outline-2 education">
+<h2 id="orgcdbff15">Education</h2>
+<div class="outline-text-2" id="text-orgcdbff15">
 </div>
-<div id="outline-container-org2b17f44" class="outline-3">
-<h3 id="org2b17f44">Gdansk University of Technology</h3>
-<div class="outline-text-3" id="text-org2b17f44">
+<div id="outline-container-org1cf1302" class="outline-3">
+<h3 id="org1cf1302">Gdansk University of Technology</h3>
+<div class="outline-text-3" id="text-org1cf1302">
 </div>
-<div id="outline-container-org986c4ca" class="outline-4">
-<h4 id="org986c4ca">Electronics, Telecommunications and Informatics Faculty</h4>
-<div class="outline-text-4" id="text-org986c4ca">
+<div id="outline-container-org6fd65c8" class="outline-4">
+<h4 id="org6fd65c8">Electronics, Telecommunications and Informatics Faculty</h4>
+<div class="outline-text-4" id="text-org6fd65c8">
 <p>
 MA thesis: <i>"Face Recognition in the crowd using high resolution camera image"</i>. Developed in Java with JNI for compatibility with supercomputer. 
 </p>
@@ -375,106 +367,106 @@ MA thesis: <i>"Face Recognition in the crowd using high resolution camera image"
 </div>
 </div>
 
-<div id="outline-container-org23c74a9" class="outline-2 skills">
-<h2 id="org23c74a9">Skills</h2>
-<div class="outline-text-2" id="text-org23c74a9">
+<div id="outline-container-org2f10213" class="outline-2 skills">
+<h2 id="org2f10213">Skills</h2>
+<div class="outline-text-2" id="text-org2f10213">
 </div>
-<div id="outline-container-orge9b9ca3" class="outline-3">
-<h3 id="orge9b9ca3">Programming</h3>
-<div class="outline-text-3" id="text-orge9b9ca3">
+<div id="outline-container-org22f9670" class="outline-3">
+<h3 id="org22f9670">Programming</h3>
+<div class="outline-text-3" id="text-org22f9670">
 </div>
-<div id="outline-container-orga59ba12" class="outline-4 percent-80">
-<h4 id="orga59ba12">Scala</h4>
-<div class="outline-text-4" id="text-orga59ba12">
-</div>
-</div>
-<div id="outline-container-orgf6e2b66" class="outline-4 percent-40">
-<h4 id="orgf6e2b66">Elixir</h4>
-<div class="outline-text-4" id="text-orgf6e2b66">
+<div id="outline-container-orgf6c751c" class="outline-4 percent-80">
+<h4 id="orgf6c751c">Scala</h4>
+<div class="outline-text-4" id="text-orgf6c751c">
 </div>
 </div>
-<div id="outline-container-org52b0fc7" class="outline-4 percent-80">
-<h4 id="org52b0fc7">JS</h4>
-<div class="outline-text-4" id="text-org52b0fc7">
+<div id="outline-container-orga8f6d50" class="outline-4 percent-40">
+<h4 id="orga8f6d50">Elixir</h4>
+<div class="outline-text-4" id="text-orga8f6d50">
 </div>
 </div>
-<div id="outline-container-org81ebe52" class="outline-4 percent-80">
-<h4 id="org81ebe52">Java</h4>
-<div class="outline-text-4" id="text-org81ebe52">
+<div id="outline-container-org73c1b3b" class="outline-4 percent-80">
+<h4 id="org73c1b3b">JS</h4>
+<div class="outline-text-4" id="text-org73c1b3b">
 </div>
 </div>
-<div id="outline-container-orgea1dd4a" class="outline-4 percent-40">
-<h4 id="orgea1dd4a">Ruby</h4>
-<div class="outline-text-4" id="text-orgea1dd4a">
+<div id="outline-container-org64f322a" class="outline-4 percent-80">
+<h4 id="org64f322a">Java</h4>
+<div class="outline-text-4" id="text-org64f322a">
 </div>
 </div>
-<div id="outline-container-orgeffb6e3" class="outline-4 percent-80">
-<h4 id="orgeffb6e3">Bash</h4>
-<div class="outline-text-4" id="text-orgeffb6e3">
+<div id="outline-container-orgb8cde02" class="outline-4 percent-40">
+<h4 id="orgb8cde02">Ruby</h4>
+<div class="outline-text-4" id="text-orgb8cde02">
 </div>
 </div>
-</div>
-<div id="outline-container-org2a79be2" class="outline-3">
-<h3 id="org2a79be2">Tooling</h3>
-<div class="outline-text-3" id="text-org2a79be2">
-</div><div id="outline-container-org3c5440d" class="outline-4">
-<h4 id="org3c5440d">Git</h4>
-</div>
-<div id="outline-container-org989c4b5" class="outline-4">
-<h4 id="org989c4b5">Docker</h4>
-</div>
-<div id="outline-container-orgbd36d12" class="outline-4">
-<h4 id="orgbd36d12">Amazon WS</h4>
-</div>
-<div id="outline-container-orgb7865a9" class="outline-4">
-<h4 id="orgb7865a9">Continuous Delivery</h4>
-</div>
-<div id="outline-container-org06a58e8" class="outline-4">
-<h4 id="org06a58e8">TDD/BDD</h4>
-</div>
-</div>
-<div id="outline-container-orge46e542" class="outline-3">
-<h3 id="orge46e542">Professional</h3>
-<div class="outline-text-3" id="text-orge46e542">
-</div>
-<div id="outline-container-org7cf167f" class="outline-4">
-<h4 id="org7cf167f">Problem Solving</h4>
-</div>
-<div id="outline-container-orga6bcb0a" class="outline-4">
-<h4 id="orga6bcb0a">Technical Leadership</h4>
-</div>
-<div id="outline-container-org5837476" class="outline-4">
-<h4 id="org5837476">Goal Orientation</h4>
-</div>
-<div id="outline-container-org625d7dd" class="outline-4">
-<h4 id="org625d7dd">Commitment</h4>
+<div id="outline-container-orgdd80ab4" class="outline-4 percent-80">
+<h4 id="orgdd80ab4">Bash</h4>
+<div class="outline-text-4" id="text-orgdd80ab4">
 </div>
 </div>
 </div>
-<div id="outline-container-org31bf8d9" class="outline-2 languages">
-<h2 id="org31bf8d9">Languages</h2>
-<div class="outline-text-2" id="text-org31bf8d9">
+<div id="outline-container-orgc6dffec" class="outline-3">
+<h3 id="orgc6dffec">Tooling</h3>
+<div class="outline-text-3" id="text-orgc6dffec">
+</div><div id="outline-container-orgfdb3e35" class="outline-4">
+<h4 id="orgfdb3e35">Git</h4>
 </div>
-<div id="outline-container-org31994b1" class="outline-4 percent-100">
-<h4 id="org31994b1">English</h4>
-<div class="outline-text-4" id="text-org31994b1">
+<div id="outline-container-org51e61d5" class="outline-4">
+<h4 id="org51e61d5">Docker</h4>
+</div>
+<div id="outline-container-org3b9dc84" class="outline-4">
+<h4 id="org3b9dc84">Amazon WS</h4>
+</div>
+<div id="outline-container-org6de3207" class="outline-4">
+<h4 id="org6de3207">Continuous Delivery</h4>
+</div>
+<div id="outline-container-org3dd200e" class="outline-4">
+<h4 id="org3dd200e">TDD/BDD</h4>
 </div>
 </div>
-<div id="outline-container-org777fc10" class="outline-4 percent-40">
-<h4 id="org777fc10">German</h4>
-<div class="outline-text-4" id="text-org777fc10">
+<div id="outline-container-orgfe531de" class="outline-3">
+<h3 id="orgfe531de">Professional</h3>
+<div class="outline-text-3" id="text-orgfe531de">
+</div>
+<div id="outline-container-org7661942" class="outline-4">
+<h4 id="org7661942">Problem Solving</h4>
+</div>
+<div id="outline-container-orgd36b545" class="outline-4">
+<h4 id="orgd36b545">Technical Leadership</h4>
+</div>
+<div id="outline-container-org1ae1477" class="outline-4">
+<h4 id="org1ae1477">Goal Orientation</h4>
+</div>
+<div id="outline-container-orgc9786f1" class="outline-4">
+<h4 id="orgc9786f1">Commitment</h4>
 </div>
 </div>
-<div id="outline-container-orgd41a2cc" class="outline-4 percent-20">
-<h4 id="orgd41a2cc">Japanese</h4>
-<div class="outline-text-4" id="text-orgd41a2cc">
+</div>
+<div id="outline-container-orge5f514a" class="outline-2 languages">
+<h2 id="orge5f514a">Languages</h2>
+<div class="outline-text-2" id="text-orge5f514a">
+</div>
+<div id="outline-container-org97aa75b" class="outline-4 percent-100">
+<h4 id="org97aa75b">English</h4>
+<div class="outline-text-4" id="text-org97aa75b">
+</div>
+</div>
+<div id="outline-container-org22db560" class="outline-4 percent-40">
+<h4 id="org22db560">German</h4>
+<div class="outline-text-4" id="text-org22db560">
+</div>
+</div>
+<div id="outline-container-org4fec55a" class="outline-4 percent-20">
+<h4 id="org4fec55a">Japanese</h4>
+<div class="outline-text-4" id="text-org4fec55a">
 </div>
 </div>
 </div>
 
-<div id="outline-container-orge1537ad" class="outline-2 footer">
-<h2 id="orge1537ad">Footer</h2>
-<div class="outline-text-2" id="text-orge1537ad">
+<div id="outline-container-org587a4d7" class="outline-2 footer">
+<h2 id="org587a4d7">Footer</h2>
+<div class="outline-text-2" id="text-org587a4d7">
 <br style="clear: left;" ></section></div>
 </div>
 </div>
