--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2017-04-13 Thu 07:51 -->
+<!-- 2017-06-05 Mon 09:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Piotr Limanowski</title>
@@ -191,7 +191,7 @@
 @licstart  The following is the entire license notice for the
 JavaScript code in this tag.
 
-Copyright (C) 2012-2013 Free Software Foundation, Inc.
+Copyright (C) 2012-2017 Free Software Foundation, Inc.
 
 The JavaScript code in this tag is free software: you can
 redistribute it and/or modify it under the terms of the GNU
@@ -238,34 +238,34 @@ for the JavaScript code in this tag.
 <div class="A4"><section class="sheet">
 <div class="hexagon"><div class="hexTop"></div><div class="hexBottom"></div></div>
 
-<div id="outline-container-org96fad74" class="outline-2 header">
-<h2 id="org96fad74">Piotr Limanowski</h2>
-<div class="outline-text-2" id="text-org96fad74">
+<div id="outline-container-org6b6f2d0" class="outline-2 header">
+<h2 id="org6b6f2d0">Piotr Limanowski</h2>
+<div class="outline-text-2" id="text-org6b6f2d0">
 </div>
 </div>
-<div id="outline-container-org75e84cf" class="outline-2 contact">
-<h2 id="org75e84cf">Contact</h2>
-<div class="outline-text-2" id="text-org75e84cf">
+<div id="outline-container-org92b49a1" class="outline-2 contact">
+<h2 id="org92b49a1">Contact</h2>
+<div class="outline-text-2" id="text-org92b49a1">
 <dl class="org-dl">
 <dt>email</dt><dd><a href="mailto:piotr@codearsonist.com">piotr@codearsonist.com</a></dd>
 <dt>web</dt><dd><a href="https://codearsonist.com">codearsonist.com</a></dd>
 </dl>
 </div>
 </div>
-<div id="outline-container-orgfbccf5c" class="outline-2 experience">
-<h2 id="orgfbccf5c">Experience</h2>
-<div class="outline-text-2" id="text-orgfbccf5c">
+<div id="outline-container-org1257d9d" class="outline-2 experience">
+<h2 id="org1257d9d">Experience</h2>
+<div class="outline-text-2" id="text-org1257d9d">
 </div>
-<div id="outline-container-orgd5596ef" class="outline-3">
-<h3 id="orgd5596ef">Technical Architect - Schibsted Tech Polska</h3>
-<div class="outline-text-3" id="text-orgd5596ef">
+<div id="outline-container-orge7396da" class="outline-3">
+<h3 id="orge7396da">Technical Architect - Schibsted Tech Polska</h3>
+<div class="outline-text-3" id="text-orge7396da">
 </div>
-<div id="outline-container-orgfb7218e" class="outline-4">
-<h4 id="orgfb7218e">Jan 2015 - to date</h4>
-<div class="outline-text-4" id="text-orgfb7218e">
+<div id="outline-container-orgfbf2749" class="outline-4">
+<h4 id="orgfbf2749">Jan 2015 - to date - Gdansk, PL</h4>
+<div class="outline-text-4" id="text-orgfbf2749">
 <ul class="org-ul">
-<li>Co-lead innovative project of migrating a whole media house into <b>Amazon Web Services</b> reducing operations costs and delivery times</li>
-<li>Built a highly-optimised, business workflow-oriented, distributed authorisation, authentication, and payment layer built on top of <b>Scala</b> (both actor model - akka and functional typelevel stack) and <b>Elixir</b></li>
+<li>Co-lead an innovative project of migrating a whole media house into <b>Amazon Web Services</b> reducing operations costs and delivery times</li>
+<li>Built a highly-optimised, business workflow-oriented, distributed authorisation, authentication, and payment layer built on top of <b>Scala</b> (akka and functional typelevel stack) and <b>Elixir</b></li>
 <li>Designed and built administrative tools for process management based upon <b>Elixir/OTP</b> improving monitoring, response times and error handling</li>
 <li>Built development tools and continuous delivery processes that improved development and delivery times by a level of magnitude</li>
 </ul>
@@ -273,13 +273,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org4bf9912" class="outline-3">
-<h3 id="org4bf9912">Technical Architect - Middleware Services - Nordea</h3>
-<div class="outline-text-3" id="text-org4bf9912">
+<div id="outline-container-orgba374c7" class="outline-3">
+<h3 id="orgba374c7">Technical Architect - Middleware Services - Nordea</h3>
+<div class="outline-text-3" id="text-orgba374c7">
 </div>
-<div id="outline-container-org278ee01" class="outline-4">
-<h4 id="org278ee01">Jan 2012 - Dec 2014</h4>
-<div class="outline-text-4" id="text-org278ee01">
+<div id="outline-container-org97ae520" class="outline-4">
+<h4 id="org97ae520">Jan 2012 - Dec 2014 - Gdynia, PL</h4>
+<div class="outline-text-4" id="text-org97ae520">
 <ul class="org-ul">
 <li>Designed and built <b>Java</b> and <b>Scala</b> middleware, business services stack enabling fast service delivery, scalability, simple integration and changeability</li>
 <li>Built and introduced development tools and continuous delivery processes that improved development and delivery times by a level of magnitude</li>
@@ -287,55 +287,43 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-orge4a4745" class="outline-3">
-<h3 id="orge4a4745">Java Developer - Financial Analysis &amp; Reporting - Nordea</h3>
-<div class="outline-text-3" id="text-orge4a4745">
+<div id="outline-container-orgd6d22bf" class="outline-3">
+<h3 id="orgd6d22bf">Java Developer - Financial Analysis &amp; Reporting - Nordea</h3>
+<div class="outline-text-3" id="text-orgd6d22bf">
 </div>
-<div id="outline-container-org842ebca" class="outline-4">
-<h4 id="org842ebca">April 2011 - Dec 2011</h4>
-<div class="outline-text-4" id="text-org842ebca">
+<div id="outline-container-org2928319" class="outline-4">
+<h4 id="org2928319">April 2011 - Dec 2011 - Gdynia, PL</h4>
+<div class="outline-text-4" id="text-org2928319">
 <ul class="org-ul">
 <li>Lead and implemented <b>Java</b> and <b>Ruby</b> backends for an international rating calculation, analysis and reporting tool</li>
-</ul>
-</div>
-</div>
-</div>
-<div id="outline-container-org980f03c" class="outline-3">
-<h3 id="org980f03c">Java Developer - File Delivery Automation - Nordea</h3>
-<div class="outline-text-3" id="text-org980f03c">
-</div>
-<div id="outline-container-orgbf0d171" class="outline-4">
-<h4 id="orgbf0d171">April 2011 - Dec 2011</h4>
-<div class="outline-text-4" id="text-orgbf0d171">
-<ul class="org-ul">
 <li>Designed and built an automated tool for customisable and secure data delivery, removing multiple shaky solutions and manual processes using <b>Java</b> controller and <b>Ruby</b> remote agents</li>
 </ul>
 </div>
 </div>
 </div>
-<div id="outline-container-orgb5f8e10" class="outline-3">
-<h3 id="orgb5f8e10">Java Developer - Kaos Consulting</h3>
-<div class="outline-text-3" id="text-orgb5f8e10">
+<div id="outline-container-org9a28211" class="outline-3">
+<h3 id="org9a28211">Java Developer - Kaos Consulting</h3>
+<div class="outline-text-3" id="text-org9a28211">
 </div>
-<div id="outline-container-orgd0beae9" class="outline-4">
-<h4 id="orgd0beae9">Oct 2010 - April 2011</h4>
-<div class="outline-text-4" id="text-orgd0beae9">
+<div id="outline-container-org72a5d02" class="outline-4">
+<h4 id="org72a5d02">Oct 2010 - April 2011 - Sydney, Australia</h4>
+<div class="outline-text-4" id="text-org72a5d02">
 <ul class="org-ul">
-<li>Picked as a top-developer for a project by the employer through International Exchange Bureau draft</li>
-<li>Built an automated data analysis and trend recognition APIs based upon <b>Hadoop</b> and <b>Java</b></li>
-<li>Implemented intra-language interfaces to accomodate existing subsystems providing an isolation layer</li>
+<li>Picked as top-developer for skilled migration international exchange programme</li>
+<li>Built an automated data analysis and trend recognition APIs based upon <b>Hadoop</b>, <b>Java</b></li>
+<li>Implemented interfaces to accomodate existing subsystems providing an isolation layer</li>
 </ul>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org9af7919" class="outline-3">
-<h3 id="org9af7919">Web Developer - Photoblog.pl</h3>
-<div class="outline-text-3" id="text-org9af7919">
+<div id="outline-container-orgfa064bb" class="outline-3">
+<h3 id="orgfa064bb">Web Developer - Photoblog.pl</h3>
+<div class="outline-text-3" id="text-orgfa064bb">
 </div>
-<div id="outline-container-orgde3caba" class="outline-4">
-<h4 id="orgde3caba">Oct 2007 - Jan 2009</h4>
-<div class="outline-text-4" id="text-orgde3caba">
+<div id="outline-container-org18fcfcc" class="outline-4">
+<h4 id="org18fcfcc">Oct 2007 - Jan 2009 - Gdansk, PL</h4>
+<div class="outline-text-4" id="text-org18fcfcc">
 <ul class="org-ul">
 <li>Designed and built a mobile website (<b>PHP</b>, <b>JS</b>), application for the biggest polish photoblogging platform improving mobile usage of the platform several times</li>
 <li>Cooperated on design and implementation (<b>Java</b>, <b>PHP</b>) of automated photomanipulation effects applied to given photos</li>
@@ -344,17 +332,17 @@ for the JavaScript code in this tag.
 </div>
 </div>
 </div>
-<div id="outline-container-orgcdbff15" class="outline-2 education">
-<h2 id="orgcdbff15">Education</h2>
-<div class="outline-text-2" id="text-orgcdbff15">
+<div id="outline-container-org75a1139" class="outline-2 education">
+<h2 id="org75a1139">Education</h2>
+<div class="outline-text-2" id="text-org75a1139">
 </div>
-<div id="outline-container-org1cf1302" class="outline-3">
-<h3 id="org1cf1302">Gdansk University of Technology</h3>
-<div class="outline-text-3" id="text-org1cf1302">
+<div id="outline-container-orgce28efb" class="outline-3">
+<h3 id="orgce28efb">Gdansk University of Technology</h3>
+<div class="outline-text-3" id="text-orgce28efb">
 </div>
-<div id="outline-container-org6fd65c8" class="outline-4">
-<h4 id="org6fd65c8">Electronics, Telecommunications and Informatics Faculty</h4>
-<div class="outline-text-4" id="text-org6fd65c8">
+<div id="outline-container-org1370c49" class="outline-4">
+<h4 id="org1370c49">Electronics, Telecommunications and Informatics Faculty</h4>
+<div class="outline-text-4" id="text-org1370c49">
 <p>
 MA thesis: <i>"Face Recognition in the crowd using high resolution camera image"</i>. Developed in Java with JNI for compatibility with supercomputer. 
 </p>
@@ -367,107 +355,109 @@ MA thesis: <i>"Face Recognition in the crowd using high resolution camera image"
 </div>
 </div>
 
-<div id="outline-container-org2f10213" class="outline-2 skills">
-<h2 id="org2f10213">Skills</h2>
-<div class="outline-text-2" id="text-org2f10213">
+<div id="outline-container-orgaeff083" class="outline-2 skills">
+<h2 id="orgaeff083">Skills</h2>
+<div class="outline-text-2" id="text-orgaeff083">
 </div>
-<div id="outline-container-org22f9670" class="outline-3">
-<h3 id="org22f9670">Programming</h3>
-<div class="outline-text-3" id="text-org22f9670">
+<div id="outline-container-org43ab383" class="outline-3">
+<h3 id="org43ab383">Programming</h3>
+<div class="outline-text-3" id="text-org43ab383">
 </div>
-<div id="outline-container-orgf6c751c" class="outline-4 percent-80">
-<h4 id="orgf6c751c">Scala</h4>
-<div class="outline-text-4" id="text-orgf6c751c">
-</div>
-</div>
-<div id="outline-container-orga8f6d50" class="outline-4 percent-40">
-<h4 id="orga8f6d50">Elixir</h4>
-<div class="outline-text-4" id="text-orga8f6d50">
+<div id="outline-container-orgbd41d9d" class="outline-4 percent-80">
+<h4 id="orgbd41d9d">Scala</h4>
+<div class="outline-text-4" id="text-orgbd41d9d">
 </div>
 </div>
-<div id="outline-container-org73c1b3b" class="outline-4 percent-80">
-<h4 id="org73c1b3b">JS</h4>
-<div class="outline-text-4" id="text-org73c1b3b">
+<div id="outline-container-orga54a3b1" class="outline-4 percent-60">
+<h4 id="orga54a3b1">Elixir</h4>
+<div class="outline-text-4" id="text-orga54a3b1">
 </div>
 </div>
-<div id="outline-container-org64f322a" class="outline-4 percent-80">
-<h4 id="org64f322a">Java</h4>
-<div class="outline-text-4" id="text-org64f322a">
+<div id="outline-container-orge81c987" class="outline-4 percent-60">
+<h4 id="orge81c987">JS</h4>
+<div class="outline-text-4" id="text-orge81c987">
 </div>
 </div>
-<div id="outline-container-orgb8cde02" class="outline-4 percent-40">
-<h4 id="orgb8cde02">Ruby</h4>
-<div class="outline-text-4" id="text-orgb8cde02">
+<div id="outline-container-orgf528a88" class="outline-4 percent-80">
+<h4 id="orgf528a88">Java</h4>
+<div class="outline-text-4" id="text-orgf528a88">
 </div>
 </div>
-<div id="outline-container-orgdd80ab4" class="outline-4 percent-80">
-<h4 id="orgdd80ab4">Bash</h4>
-<div class="outline-text-4" id="text-orgdd80ab4">
+<div id="outline-container-orgdf06ffb" class="outline-4 percent-40">
+<h4 id="orgdf06ffb">Ruby</h4>
+<div class="outline-text-4" id="text-orgdf06ffb">
 </div>
 </div>
-</div>
-<div id="outline-container-orgc6dffec" class="outline-3">
-<h3 id="orgc6dffec">Tooling</h3>
-<div class="outline-text-3" id="text-orgc6dffec">
-</div><div id="outline-container-orgfdb3e35" class="outline-4">
-<h4 id="orgfdb3e35">Git</h4>
-</div>
-<div id="outline-container-org51e61d5" class="outline-4">
-<h4 id="org51e61d5">Docker</h4>
-</div>
-<div id="outline-container-org3b9dc84" class="outline-4">
-<h4 id="org3b9dc84">Amazon WS</h4>
-</div>
-<div id="outline-container-org6de3207" class="outline-4">
-<h4 id="org6de3207">Continuous Delivery</h4>
-</div>
-<div id="outline-container-org3dd200e" class="outline-4">
-<h4 id="org3dd200e">TDD/BDD</h4>
-</div>
-</div>
-<div id="outline-container-orgfe531de" class="outline-3">
-<h3 id="orgfe531de">Professional</h3>
-<div class="outline-text-3" id="text-orgfe531de">
-</div>
-<div id="outline-container-org7661942" class="outline-4">
-<h4 id="org7661942">Problem Solving</h4>
-</div>
-<div id="outline-container-orgd36b545" class="outline-4">
-<h4 id="orgd36b545">Technical Leadership</h4>
-</div>
-<div id="outline-container-org1ae1477" class="outline-4">
-<h4 id="org1ae1477">Goal Orientation</h4>
-</div>
-<div id="outline-container-orgc9786f1" class="outline-4">
-<h4 id="orgc9786f1">Commitment</h4>
+<div id="outline-container-org199b0b9" class="outline-4 percent-80">
+<h4 id="org199b0b9">Bash</h4>
+<div class="outline-text-4" id="text-org199b0b9">
 </div>
 </div>
 </div>
-<div id="outline-container-orge5f514a" class="outline-2 languages">
-<h2 id="orge5f514a">Languages</h2>
-<div class="outline-text-2" id="text-orge5f514a">
+<div id="outline-container-org871e522" class="outline-3">
+<h3 id="org871e522">Tools</h3>
+<div class="outline-text-3" id="text-org871e522">
+</div><div id="outline-container-org003ca1a" class="outline-4">
+<h4 id="org003ca1a">Git</h4>
 </div>
-<div id="outline-container-org97aa75b" class="outline-4 percent-100">
-<h4 id="org97aa75b">English</h4>
-<div class="outline-text-4" id="text-org97aa75b">
+<div id="outline-container-orgddbfc74" class="outline-4">
+<h4 id="orgddbfc74">Docker</h4>
+</div>
+<div id="outline-container-org73bfb64" class="outline-4">
+<h4 id="org73bfb64">Amazon WS</h4>
+</div>
+<div id="outline-container-orgb954968" class="outline-4">
+<h4 id="orgb954968">Ansible</h4>
+</div>
+<div id="outline-container-org9140f07" class="outline-4">
+<h4 id="org9140f07">Jenkins/Concourse</h4>
 </div>
 </div>
-<div id="outline-container-org22db560" class="outline-4 percent-40">
-<h4 id="org22db560">German</h4>
-<div class="outline-text-4" id="text-org22db560">
+<div id="outline-container-org5942912" class="outline-3">
+<h3 id="org5942912">Professional</h3>
+<div class="outline-text-3" id="text-org5942912">
+</div>
+<div id="outline-container-org5bcb380" class="outline-4">
+<h4 id="org5bcb380">Problem Solving</h4>
+</div>
+<div id="outline-container-org31b1c11" class="outline-4">
+<h4 id="org31b1c11">Technical Leadership</h4>
+</div>
+<div id="outline-container-orga2c3497" class="outline-4">
+<h4 id="orga2c3497">Goal Orientation</h4>
+</div>
+<div id="outline-container-org9c2a548" class="outline-4">
+<h4 id="org9c2a548">Commitment</h4>
 </div>
 </div>
-<div id="outline-container-org4fec55a" class="outline-4 percent-20">
-<h4 id="org4fec55a">Japanese</h4>
-<div class="outline-text-4" id="text-org4fec55a">
+</div>
+<div id="outline-container-orgb0e7292" class="outline-2 languages">
+<h2 id="orgb0e7292">Languages</h2>
+<div class="outline-text-2" id="text-orgb0e7292">
+</div>
+<div id="outline-container-orgd6cc390" class="outline-4 percent-100">
+<h4 id="orgd6cc390">English</h4>
+<div class="outline-text-4" id="text-orgd6cc390">
+</div>
+</div>
+<div id="outline-container-org45b977c" class="outline-4 percent-40">
+<h4 id="org45b977c">German</h4>
+<div class="outline-text-4" id="text-org45b977c">
+</div>
+</div>
+<div id="outline-container-org0b82af7" class="outline-4 percent-20">
+<h4 id="org0b82af7">Japanese</h4>
+<div class="outline-text-4" id="text-org0b82af7">
 </div>
 </div>
 </div>
 
-<div id="outline-container-org587a4d7" class="outline-2 footer">
-<h2 id="org587a4d7">Footer</h2>
-<div class="outline-text-2" id="text-org587a4d7">
-<br style="clear: left;" ></section></div>
+<div id="outline-container-org6b6b803" class="outline-2 footer">
+<h2 id="org6b6b803">Footer</h2>
+<div class="outline-text-2" id="text-org6b6b803">
+<p>
+I hereby give consent for my personal data included in the job offer to be processed for the purposes of recruitment under the Data Protection Act 1997 (Dz. U. no. 133, item 883)”
+</p>
 </div>
 </div>
 </div>
